--- a/OtoTamir.WEBUI/Views/Treasury/Index.cshtml
+++ b/OtoTamir.WEBUI/Views/Treasury/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model OtoTamir.WEBUI.Models.TreasuryDashboardViewModel
+﻿@model TreasuryDashboardDTO
 @{
     ViewData["Title"] = "Kasa ve Banka Yönetimi";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -140,7 +140,30 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-12">
+        <div class="card card-primary card-outline">
+            <div class="card-header">
+                <h3 class="card-title">
+                    <i class="fas fa-chart-line mr-1"></i>
+                    Son 6 Ay Gelir/Gider Analizi
+                </h3>
+                <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                        <i class="fas fa-minus"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="chart">
+                    <canvas id="revenueChart" style="min-height: 300px; height: 300px; max-height: 300px; max-width: 100%;"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
+<div class="row"> ... </div>
 <div class="row">
     <div class="col-12">
         <div class="card">
@@ -218,3 +241,79 @@
 <div class="modal fade" id="modalAddCard" tabindex="-1" aria-hidden="true">
     @await Component.InvokeAsync("_AddBankCardViewComponentPartial")
 </div>
+@section Scripts {
+    <script src="~/AdminLTE-master/plugins/chart.js/Chart.min.js"></script>
+
+    <script>
+        $(function () {
+            // Backend'den gelen verileri JS değişkenlerine al
+            // Html.Raw ve Json.Serialize kullanarak C# Listesini JS Array'ine çeviriyoruz
+            var labels = @Html.Raw(Json.Serialize(Model.ChartLabels));
+            var incomeData = @Html.Raw(Json.Serialize(Model.IncomeData));
+            var expenseData = @Html.Raw(Json.Serialize(Model.ExpenseData));
+
+            var areaChartCanvas = $('#revenueChart').get(0).getContext('2d');
+
+            var areaChartData = {
+                labels  : labels,
+                datasets: [
+                    {
+                        label               : 'Gelirler (Tahsilat)',
+                        backgroundColor     : 'rgba(40, 167, 69, 0.9)', // Yeşil
+                        borderColor         : 'rgba(40, 167, 69, 0.8)',
+                        pointRadius          : false,
+                        pointColor          : '#28a745',
+                        pointStrokeColor    : 'rgba(40, 167, 69, 1)',
+                        pointHighlightFill  : '#fff',
+                        pointHighlightStroke: 'rgba(40, 167, 69, 1)',
+                        data                : incomeData
+                    },
+                    {
+                        label               : 'Giderler (Harcama)',
+                        backgroundColor     : 'rgba(220, 53, 69, 0.9)', // Kırmızı
+                        borderColor         : 'rgba(220, 53, 69, 0.8)',
+                        pointRadius         : false,
+                        pointColor          : 'rgba(220, 53, 69, 1)',
+                        pointStrokeColor    : '#c1c7d1',
+                        pointHighlightFill  : '#fff',
+                        pointHighlightStroke: 'rgba(220, 220, 220, 1)',
+                        data                : expenseData
+                    }
+                ]
+            }
+
+            var areaChartOptions = {
+                maintainAspectRatio : false,
+                responsive : true,
+                legend: {
+                    display: true
+                },
+                scales: {
+                    xAxes: [{
+                        gridLines : {
+                            display : false,
+                        }
+                    }],
+                    yAxes: [{
+                        gridLines : {
+                            display : true,
+                        },
+                        ticks: {
+                            beginAtZero: true,
+                            callback: function(value, index, values) {
+                                return value.toLocaleString("tr-TR") + ' ₺'; // TL Simgesi ekle
+                            }
+                        }
+                    }]
+                }
+            }
+
+            // Grafiği Çiz
+            new Chart(areaChartCanvas, {
+                type: 'bar', // Çizgi grafik istersen 'line' yapabilirsin
+                data: areaChartData,
+                options: areaChartOptions
+            });
+        });
+    </script>
+}
