balancelog removed. added addpayment component and services

--- a/OtoTamir.WEBUI/Views/Client/Clients.cshtml
+++ b/OtoTamir.WEBUI/Views/Client/Clients.cshtml
@@ -145,7 +145,7 @@
                                         <!-- Ödeme butonu -->
                                         <a class="btn btn-sm btn-success"
                                            asp-controller="Client"
-                                           asp-action="BalanceLogs"
+                                           asp-action="FinancialHistory"
                                            asp-route-clientId="@item.Id">
                                             Ödeme Ekle
                                         </a>
