--- a/OtoTamir.WEBUI/Views/_ViewImports.cshtml
+++ b/OtoTamir.WEBUI/Views/_ViewImports.cshtml
@@ -9,5 +9,6 @@
 @using OtoTamir.CORE.DTOs.ServiceRecordDTOs
 @using OtoTamir.CORE.DTOs.TreasuryDTOs
 @using Microsoft.AspNetCore.Identity
+@using OtoTamir.WEBUI.Services
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
